# PlexAniScrobbler

./: README.md  requirements.txt  setup.cfg
plexaniscrobbler/: __init__.py  listener.py
plexaniscrobbler/anilist/: __init__.py  dao.py  model.py  query.py
plexaniscrobbler/utils/: __init__.py  config.py  persistence.py
plexaniscrobbler/web/: auth.py  listener.py
