[metadata]
name = PlexAniScrobbler
url = "https://github.com/twissell-/PlexAniScrobbler"
version = 0.0.1
author = Demo
author_email = dmaggioesne@gmail.com
description = "A simple webhook to scrobble anime watched on Plex to Anilist."
long_description = file: README.md
license = MIT
classifiers = 
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",

[options]
python_requires = >=3.7
install_requires =
    flask
    requests
    levenshtein
